
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2025 JUN 13a
  * in model/chem/_NH3_Plasma_32s
    - moved rodriguez2024v3.c to rodriguez2024v4.c
    - copied rodriguez2024v2.c to rodriguez2024v3.c but updated the NH3 townsend ionization reaction
      which had considerable error
      

2025 JUN 09a
  * in model/thermo/_generic/electronimpact.c
    - added _EoverN_from_Te_chieminus_O2()
    - added _EoverN_from_Te_chieminus_NO()
    - in _EoverNk_from_Te_chieminus(), added calls to _EoverN_from_Te_chieminus_O2() and to
      _EoverN_from_Te_chieminus_NO()
      

2025 MAY 13b
  * in model/chem/_NH3_Plasma_32s/arakoni2007omprakas.c
    - added version 12 which corresponds to rodriguezv2
    

2025 MAY 13a
  * in model/fluid/_Navier-Stokes_plasma/fluid_source.c
    - in find_Semfield(), now calls _zetav_Rodriguez2025() for the N2VIBMODEL_RODRIGUEZ2025
    - in find_Qe_Rodriguez2025() and find_dSe_dU_transport_Rodriguez2025() now multiplies the 
      electron heating terms by _zetav_Rodriguez2025()
    - in find_Qe_Rodriguez2025_ADHOC(), now multiplies the electron heating terms by 
      _zetav_Rodriguez2025() and limit electron heating to N2
    - in find_dSe_dU_transport_Rodriguez2025_ADHOC(), now linearize only the electron cooling
      terms
  * in model/thermo/_generic/thermo.c
    - added _zetav_from_Te_Rodriguez2025()
    

2025 MAY 05a
  * in model/fluid/_Navier-Stokes_plasma/fluid_source.c
    - in find_Qe_Rodriguez2025() and find_Qe_Rodriguez2025_ADHOC(), limited the inelastic heating
      to N2 only
      

2025 MAY 01a
  * in various files:
    - renamed N2VIBMODEL_MACHERET to N2VIBMODEL_PARENT2024
  * in model/fluid/_Navier-Stokes_plasma/fluid.c
    - removed N2VIBJOULEHEATING and N2VIBJOULEHEATINGMODEL